# lecture_CERN_data_analysis_student_projects

Elizaveta_Popova/scripts/: get_one_day_data.py  get_one_year_data.py
Jokubas_Genys/: README.md
Jokubas_Maciulis/: README.md
Jokubas_Maciulis/src/: train.py
Paulius_Valeikis/vln_hs_price_proj/: .gitignore  README.md  pyproject.toml
Paulius_Valeikis/vln_hs_price_proj/aruodas_scrape/: DB_manage.py  cli.py  export.py  extractor.py  html_parse.py  pipeline_db.py  pipiline.py  select_from_db
Paulius_Valeikis/vln_hs_price_proj/aruodas_scrape/SQL/: create_listing_stg_table.sql  create_listing_table.sql  create_task_seq.sql  create_task_table.sql
