[project]
name = "vln-hs-price-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "rnet (>=2.4.2,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "logger (>=1.4,<2.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "aruodas_scrape" }
]

[project.scripts]
aruodas = "aruodas_scrape.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
